--- a/lushlyrics-webapp-django-main/templates/user/login.html
+++ b/lushlyrics-webapp-django-main/templates/user/login.html
@@ -39,7 +39,7 @@
                 Password
             </label>
             <input type="password" class="form_input" name="password" placeholder="Password" required>
-            {% if not case %}
+            {% if case %}
             <span style="color:#f79862;
                              padding-bottom:20px;
                              text-align:center;">Username or password invalid</span>
@@ -47,7 +47,10 @@
             <button class='btn btn_log_in' type="submit">Log in</button>
             <div class="divider"></div>
             <p class='label center-align'>Don't have an account?</p>
-            <a class='btn btn_sign_up' href="/user/signup">Sign Up for Lushlyrics</a>
+            <a class='btn btn_sign_up' href="/register">Sign Up for Lushlyrics</a>
+            <p class="label center-align">
+                <a href="/forgot-password">Forgot password?</a>
+            </p>
         </form>
     </div>
 
