--- a/lushlyrics-webapp-django-main/templates/user/login.html
+++ b/lushlyrics-webapp-django-main/templates/user/login.html
@@ -19,6 +19,26 @@
 
 <body>
 
+    <div class="container message">
+        {% if messages %}
+        <ul style="text-align: center; color: red;">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
+    <div class="container error">
+        {% if form.errors %}
+        <ul style="text-align: center; color: red;">
+            {% for field in form %}
+            {% for error in field.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
 
     <div class="signup_header">
         <a href="" target="_blank">
